--- a/demo2/domain.yml
+++ b/demo2/domain.yml
@@ -49,10 +49,10 @@ responses:
   utter_save_characteristics:
   - text: "그리신 {drawing_word}의 특징이 뭔가요? white cat, blue eyes, diamond necklace 과 같이 설명해주세요!"
 
-  utter_draw_ing:
-  - text: "그리신 그림에 말씀해주신 특징을 넣어 그림을 완성해볼게요. 잠시만 기다려주세요~"
+  # utter_draw_ing:
+  # - text: "그리신 그림에 말씀해주신 특징을 넣어 그림을 완성해볼게요. 잠시만 기다려주세요~"
 
-  utter_draw_ing2:
+  utter_draw_ing:
   - text: "더 수정해보시겠어요?"
 
   utter_draw_finish:
@@ -70,14 +70,14 @@ responses:
   utter_ask_save_characteristic:
   - text: "그리신 {drawing_word}의 특징이 뭔가요? white cat, blue eyes, diamond necklace 과 같이 설명해주세요!"
 
-  utter_ask_sketch_type:
+  utter_ask_change_sketch:
   - text: "칠한 부분을 어떻게 수정하고 싶으세요? 'wear a hat'이나 'wear a diamond necklace'처럼 설명해주세요!"
 
   utter_change_start:
   - text: "저는 목걸이나 모자를 씌우게 할 수 있어요! 이 중 수정하고 싶은 부분을 꼼꼼하게 칠해주세요."
 
-  utter_submit:
-  - text: "수정확인"
+  utter_submit_change_form:
+  - text: "말씀해주신대로 {drawing_word} 그림을 완성해봤어요! 마음에 드셨으면 좋겠네요 :)"
 
   utter_draw_slots:
   - text: "{drawing_word}"
@@ -92,7 +92,7 @@ session_config:
 entities:
 - drawing_word
 - save_characteristic
-- sketch_type
+- change_sketch
 
 slots:
   drawing_word:
@@ -102,17 +102,17 @@ slots:
     - type: from_entity
       entity: drawing_word
   save_characteristic:
-    type: list
-    influence_conversation: true
-    mappings:
-    - type: from_entity
-      entity: save_characteristic
-  sketch_type:
     type: text
     influence_conversation: true
     mappings:
     - type: from_entity
-      entity: sketch_type
+      entity: save_characteristic
+  change_sketch:
+    type: text
+    influence_conversation: true
+    mappings:
+    - type: from_entity
+      entity: change_sketch
 
 
 forms:
@@ -122,7 +122,7 @@ forms:
       - save_characteristic
   change_sketch_form:
     required_slots:
-      - sketch_type
+      - change_sketch
 
 actions:
 - utter_draw_start
