--- a/rasa/config.yml
+++ b/rasa/config.yml
@@ -3,8 +3,12 @@ language: ko
 pipeline:
 - name: SpacyNLP
   model: ko_core_news_sm
-- name: SpacyTokenizer
-- name: SpacyFeaturizer
+- name: custom.mecab_tokenizer.mecabtok_3.MecabTokenizer
+  intent_tokenization_flag: false
+  intent_split_symbol: _
+  token_pattern: None
+- name: custom.gloVe_featurizer.gloVe_feature.GloveFeaturizer
+  alias: gloVe
 - name: RegexFeaturizer
 - name: LexicalSyntacticFeaturizer
 - name: CountVectorsFeaturizer
@@ -13,21 +17,14 @@ pipeline:
   min_ngram: 1
   max_ngram: 4
 - name: DIETClassifier
-  epochs: 100
+  epochs: 50
 - name: EntitySynonymMapper
-- name: ResponseSelector
+policies:
+- name: TEDPolicy
   epochs: 100
-policies: null
-# # No configuration for policies was provided. The following default policies were used to train your model.
-# # If you'd like to customize them, uncomment and adjust the policies.
-# # See https://rasa.com/docs/rasa/policies for more information.
-#   - name: MemoizationPolicy
-#   - name: RulePolicy
-#   - name: UnexpecTEDIntentPolicy
-#     max_history: 5
-#     epochs: 100
-#   - name: TEDPolicy
-#     max_history: 5
-#     epochs: 100
-#     constrain_similarities: true
-assistant_id: 20230415-132644-raw-mallet
+- name: AugmentedMemoizationPolicy
+- name: RulePolicy
+  core_fallback_threshold: 0.4
+  core_fallback_action_name: action_default_fallback
+  enable_fallback_prediction: true
+assistant_id: 20230505-034049-charcoal-bug
