--- a/rasa/config.yml
+++ b/rasa/config.yml
@@ -17,7 +17,7 @@ pipeline:
 - name: EntitySynonymMapper
 - name: ResponseSelector
   epochs: 100
-policies: null
+policies: 
 # # No configuration for policies was provided. The following default policies were used to train your model.
 # # If you'd like to customize them, uncomment and adjust the policies.
 # # See https://rasa.com/docs/rasa/policies for more information.
@@ -30,4 +30,11 @@ policies: null
 #     max_history: 5
 #     epochs: 100
 #     constrain_similarities: true
+- name: RulePolicy
+  # Confidence threshold for the `core_fallback_action_name` to apply.
+  # The action will apply if no other action was predicted with
+  # a confidence >= core_fallback_threshold
+  core_fallback_threshold: 0.3
+  core_fallback_action_name: "action_default_fallback"
+  enable_fallback_prediction: True
 assistant_id: 20230415-132644-raw-mallet
