--- a/rasa/domain.yml
+++ b/rasa/domain.yml
@@ -159,7 +159,7 @@ responses:
   - text: 고양이와 산과 나무 중 어느 것을 그리고 싶으세요?
 
   utter_ask_drawing_prompt:
-  - text: 그리신 그림의 특징은 무엇인가요? black cat/blue eyes/pearl necklace 와 같이 설명해주세요!
+  - text: 그리신 그림의 특징은 무엇인가요? black cat/blue eyes/pearl necklace 와 같이 설명해주세요! (그림을 다시 그리고 싶다면 "다시 그릴래"를 입력해주세요!)
 
   utter_draw:
   - text: '{drawing_object}를 그림판에 그려주세요!'
