--- a/rasa/domain.yml
+++ b/rasa/domain.yml
@@ -90,9 +90,9 @@ actions:
   - action_repeat_question
   - action_set_reminder
   - action_ask_again
-  - action_react_to_reminder
-  - action_forget_reminders
-  - action_reset_form
+  - action_react_to_reminder # (추가) 사용자의 응답 없을 때
+  - action_forget_reminders # (추가) 알림 취소 기능 (일정 시간 내에 사용자가 응답을 했을 때)
+  - action_reset_form # (추가) 다시 그리기
 intents:
 #   - greet
 #   - goodbye
@@ -115,7 +115,7 @@ intents:
   - thanks
   - ask_remind_call
   - EXTERNAL_reminder
-  - ask_forget_reminders
+  - ask_forget_reminders 
 responses:
 #   utter_greet:
 #   - text: "Hey! How are you?"
@@ -150,6 +150,7 @@ responses:
 #   - text: What kind of pizza would you like to buy?
 
 ####################
+#(추가)
   utter_greet:
   - text: 안녕하세요.
   - text: 반가워요.
@@ -157,9 +158,10 @@ responses:
 # drawing
   utter_ask_drawing_object:
   - text: 고양이와 산과 나무 중 어느 것을 그리고 싶으세요?
-
+  
+#(추가)시나리오 변경
   utter_ask_drawing_prompt:
-  - text: 그리신 그림의 특징은 무엇인가요? black cat/blue eyes/pearl necklace 와 같이 설명해주세요! (그림을 다시 그리고 싶다면 "다시 그릴래"를 입력해주세요!)
+  - text: 그리신 그림의 특징은 무엇인가요? black cat/blue eyes/pearl necklace 와 같이 설명해주세요! (그림을 다시 그리고 싶다면 "다시 그리기"를 입력해주세요!)
 
   utter_draw:
   - text: '{drawing_object}를 그림판에 그려주세요!'
@@ -182,6 +184,7 @@ responses:
   utter_thanks:
   - text: 별말씀을요.
 
+  #(추가)
   utter_default:
   - text: "죄송합니다. 이해하지 못했습니다. 질문에 응답해주세요!"
 
