feat: 시나리오 dataset 생성(1)

--- a/2th/rasa/data/nlu.yml
+++ b/2th/rasa/data/nlu.yml
@@ -520,6 +520,14 @@ nlu:
 
 - intent: thanks
   examples: |
+    - 네
+    - 알겠습니다
+    - 그래
+    - 그래 고마워
+    - 알겠어
+    - 확인했습니다
+    - 알겠어요
+    - 감사합니다
     - 고마워
     - 고맙다
     - 땡큐
